// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile matches snapshot when does not have a title 1`] = `
.css-1v9jhx3-Tile__root {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
}

@media only screen and (max-width:768px) {
  .css-1v9jhx3-Tile__root {
    padding: 16px;
  }
}

<div
  className="css-1v9jhx3-Tile__root"
>
  Tile content
</div>
`;

exports[`Tile matches snapshot when has a title 1`] = `
.css-1v9jhx3-Tile__root {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
}

@media only screen and (max-width:768px) {
  .css-1v9jhx3-Tile__root {
    padding: 16px;
  }
}

.css-1rf5tyk-Tile__title {
  color: #879ba6;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.9rem;
  margin-bottom: 16px;
}

@media only screen and (max-width:768px) {
  .css-1rf5tyk-Tile__title {
    margin-bottom: 8px;
  }
}

<div
  className="css-1v9jhx3-Tile__root"
>
  <div
    className="css-1rf5tyk-Tile__title"
  >
    Title
  </div>
  Tile content
</div>
`;
